--- a/Twitter-sentiment-analysis-Machine-Learning-doc2vec.Rmd
+++ b/Twitter-sentiment-analysis-Machine-Learning-doc2vec.Rmd
@@ -54,11 +54,16 @@ tweets_test <- tweets_classified[-trainIndex, ]
 prep_fun <- tolower
 tok_fun <- word_tokenizer
 
-it_train <- itoken(tweets_train$text,
-                   preprocessor = prep_fun,
-                   tokenizer = tok_fun,
-                   ids = tweets_train$id,
-                   progressbar = TRUE)
+it_train <- itoken(tweets_train$text, 
+ preprocessor = prep_fun, 
+ tokenizer = tok_fun,
+ ids = tweets_train$id,
+ progressbar = TRUE)
+it_test <- itoken(tweets_test$text, 
+ preprocessor = prep_fun, 
+ tokenizer = tok_fun,
+ ids = tweets_test$id,
+ progressbar = TRUE)
 
 
 # creating vocabulary and document-term matrix
